# rally

./: .gitignore  Cargo.toml  README.md
src/: app.rs  history.rs  input.rs  lib.rs  main.rs  rally.rs  repl.rs  session.rs  style.rs  termcraft.rs
src/session/: scheme.rs  serde.rs  ssh.rs  store.rs
src/session/impls/: ssh.rs
