[package]
name = "rally"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
clap_derive = "4.5.11"
colored = "2.1.0"
directories = "5.0.1"
rustyline = { version = "14.0.0", features = ["with-file-history"] }
shlex = "1.3.0"
