[package]
name = "rally"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.81"
clap = { version = "4.5.11", features = ["derive"] }
clap_derive = "4.5.11"
crossterm = { version = "0.27.0", features = ["event-stream"] }
directories = "5.0.1"
indexmap = { version = "2.5.0", features = ["serde"] }
itertools = "0.13.0"
miette = { version = "7.2.0", features = ["fancy"] }
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
russh = "0.44.0"
rustyline = { version = "14.0.0", features = ["with-file-history"] }
serde = { version = "1.0.209", features = ["derive"] }
shlex = "1.3.0"
tabled = "0.16.0"
tokio = { version = "1.39.2", features = ["full"] }
tokio-macros = "2.4.0"
toml = { version = "0.8.19", features = ["preserve_order"] }
url = { version = "2.5.2", features = ["serde"] }
